
NEWS
====

* Use 'ccss' name consistently, drop 'lib' prefix where possible.

Core
* Deep-free properties when destroying a stylesheet, fixes memory leak.
* New ccss_style_hash() value can be used to compare styles for equality.
* Ability to load CSS files and dump the resulting CSS in
  "ccss-stylesheet-to-gtkrc" for debugging multi-file stylesheets.
* New ccss_stylesheet_unload() to unload css files or buffers.

Cairo
* Support for loadable modules to hook in custom CSS3 "appearance" renderers.
* Draw background with alpha channel.

Gtk
* Improvements to gtk[rc] compatibility.

Version 0.4, 2009-07-31
-----------------------

* Support for multiple pseudo-classes per node.

Version 0.3.1, 2009-07-06
-------------------------

* Improvements to color parsing.
* Improve css dump function to produce almost valid CSS with debug information in comments.

Version 0.3, 2009-06-02
-----------------------

* Modular grammars.
* Cairo-style reference counting.
* Split libccss-base, -cairo and -gtk libraries.
* Start of a test-suite.

Version 0.2
-----------

Not released, internal only.

Version 0.1, 2008-10-17
-----------------------

* Implement blocks with hash-table and a string API (TODO: generic getter/new'er in ccss_block_t).
* Implement ccss_style_t with a hash-table, only add set values and fall back to the built-in style for unset properties.
* Implement style with a hash-table and provide a query API. 
* Extension API for custom CSS properties.
