@@ -22,3 +22,27 @@
 Initialization
 
 
+<!-- ##### FUNCTION ccss_cairo_style_draw_line ##### -->
+<para>
+
+</para>
+
+@self: 
+@cr: 
+@x1: 
+@x2: 
+@y1: 
+@y2: 
+
+<!-- ##### FUNCTION ccss_cairo_style_draw_outline ##### -->
+<para>
+
+</para>
+
+@self: 
+@cr: 
+@x: 
+@y: 
+@width: 
+@height: 
+
